src/main/java/parser/ExpressGrammarParser.java
// Generated from F:/JavaWorkSpace/IfcGraph/src/main/resources\ExpressGrammar.g4 by ANTLR 4.7
package parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExpressGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		WS=25, BLOCK_COMMENT=26, INT=27, SCHEMA=28, END_SCHEMA=29, TYPE=30, END_TYPE=31, 
		ENTITY=32, END_ENTITY=33, FUNCTION=34, END_FUNCTION=35, RULE=36, END_RULE=37, 
		SUBTYPE_OF=38, SUPERTYPE_OF=39, ONEOF=40, ABSTRACT=41, OPTIONAL=42, FIXED=43, 
		OF=44, SET=45, ARRAY=46, LIST=47, BOOLEAN=48, REAL=49, INTEGER=50, BINARY=51, 
		NUMBER=52, STRING=53, ENUMERATION=54, SELECT=55, WHERE=56, DERIVE=57, 
		UNIQUE=58, INVERSE=59, SELF_=60, FOR=61, NAME=62;
	public static final int
		RULE_schema = 0, RULE_beginSchema = 1, RULE_entity = 2, RULE_beginEntity = 3, 
		RULE_entityType = 4, RULE_subtypeOf = 5, RULE_supertypeOf = 6, RULE_entityArgument = 7, 
		RULE_collectionOf = 8, RULE_collectionArgPart = 9, RULE_beginNameList = 10, 
		RULE_endNameList = 11, RULE_nameList = 12, RULE_names = 13, RULE_typeName = 14, 
		RULE_type = 15, RULE_inversePart = 16, RULE_inverseSentence = 17, RULE_derivePart = 18, 
		RULE_deriveOverrideSentence = 19, RULE_deriveSentence = 20, RULE_uniquePart = 21, 
		RULE_uniqueSentence = 22, RULE_wherePart = 23, RULE_whereSentence = 24, 
		RULE_function = 25, RULE_therule = 26, RULE_commonKeyword = 27, RULE_commonSentence = 28, 
		RULE_typeSingleKeyword = 29, RULE_typeArrayKeyword = 30, RULE_typeKeyword = 31, 
		RULE_innerKeyword = 32, RULE_sign = 33;
	public static final String[] ruleNames = {
		"schema", "beginSchema", "entity", "beginEntity", "entityType", "subtypeOf", 
		"supertypeOf", "entityArgument", "collectionOf", "collectionArgPart", 
		"beginNameList", "endNameList", "nameList", "names", "typeName", "type", 
		"inversePart", "inverseSentence", "derivePart", "deriveOverrideSentence", 
		"deriveSentence", "uniquePart", "uniqueSentence", "wherePart", "whereSentence", 
		"function", "therule", "commonKeyword", "commonSentence", "typeSingleKeyword", 
		"typeArrayKeyword", "typeKeyword", "innerKeyword", "sign"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "';'", "'('", "')'", "':'", "'['", "'?'", "']'", "','", "'='", "'.'", 
		"':='", "'<'", "'>'", "'\\'", "'/'", "'|'", "'*'", "'''", "'\"'", "'!'", 
		"'-'", "'+'", "'{'", "'}'", null, null, null, "'SCHEMA'", "'END_SCHEMA;'", 
		"'TYPE'", "'END_TYPE;'", "'ENTITY'", "'END_ENTITY;'", "'FUNCTION'", "'END_FUNCTION;'", 
		"'RULE'", "'END_RULE;'", "'SUBTYPE OF'", "'SUPERTYPE OF'", "'ONEOF'", 
		"'ABSTRACT'", "'OPTIONAL'", "'FIXED'", "'OF'", "'SET'", "'ARRAY'", "'LIST'", 
		"'BOOLEAN'", "'REAL'", "'INTEGER'", "'BINARY'", "'NUMBER'", "'STRING'", 
		"'ENUMERATION'", "'SELECT'", "'WHERE'", "'DERIVE'", "'UNIQUE'", "'INVERSE'", 
		"'SELF\\'", "'FOR'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "WS", "BLOCK_COMMENT", "INT", "SCHEMA", "END_SCHEMA", "TYPE", "END_TYPE", 
		"ENTITY", "END_ENTITY", "FUNCTION", "END_FUNCTION", "RULE", "END_RULE", 
		"SUBTYPE_OF", "SUPERTYPE_OF", "ONEOF", "ABSTRACT", "OPTIONAL", "FIXED", 
		"OF", "SET", "ARRAY", "LIST", "BOOLEAN", "REAL", "INTEGER", "BINARY", 
		"NUMBER", "STRING", "ENUMERATION", "SELECT", "WHERE", "DERIVE", "UNIQUE", 
		"INVERSE", "SELF_", "FOR", "NAME"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ExpressGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExpressGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SchemaContext extends ParserRuleContext {
		public BeginSchemaContext beginSchema() {
			return getRuleContext(BeginSchemaContext.class,0);
		}
		public TerminalNode END_SCHEMA() { return getToken(ExpressGrammarParser.END_SCHEMA, 0); }
		public List<EntityContext> entity() {
			return getRuleContexts(EntityContext.class);
		}
		public EntityContext entity(int i) {
			return getRuleContext(EntityContext.class,i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<TheruleContext> therule() {
			return getRuleContexts(TheruleContext.class);
		}
		public TheruleContext therule(int i) {
			return getRuleContext(TheruleContext.class,i);
		}
		public SchemaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_schema; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressGrammarVisitor ) return ((ExpressGrammarVisitor<? extends T>)visitor).visitSchema(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SchemaContext schema() throws RecognitionException {
		SchemaContext _localctx = new SchemaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_schema);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			beginSchema();
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TYPE) | (1L << ENTITY) | (1L << FUNCTION) | (1L << RULE))) != 0)) {
				{
				setState(73);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ENTITY:
					{
					setState(69);
					entity();
					}
					break;
				case TYPE:
					{
					setState(70);
					type();
					}
					break;
				case FUNCTION:
					{
					setState(71);
					function();
					}
					break;
				case RULE:
					{
					setState(72);
					therule();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(77);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(78);
			match(END_SCHEMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BeginSchemaContext extends ParserRuleContext {
		public TerminalNode SCHEMA() { return getToken(ExpressGrammarParser.SCHEMA, 0); }
		public TerminalNode NAME() { return getToken(ExpressGrammarParser.NAME, 0); }
		public BeginSchemaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_beginSchema; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressGrammarVisitor ) return ((ExpressGrammarVisitor<? extends T>)visitor).visitBeginSchema(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BeginSchemaContext beginSchema() throws RecognitionException {
		BeginSchemaContext _localctx = new BeginSchemaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_beginSchema);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(SCHEMA);
			setState(81);
			match(NAME);
			setState(82);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntityContext extends ParserRuleContext {
		public BeginEntityContext beginEntity() {
			return getRuleContext(BeginEntityContext.class,0);
		}
		public TerminalNode END_ENTITY() { return getToken(ExpressGrammarParser.END_ENTITY, 0); }
		public List<EntityTypeContext> entityType() {
			return getRuleContexts(EntityTypeContext.class);
		}
		public EntityTypeContext entityType(int i) {
			return getRuleContext(EntityTypeContext.class,i);
		}
		public List<EntityArgumentContext> entityArgument() {
			return getRuleContexts(EntityArgumentContext.class);
		}
		public EntityArgumentContext entityArgument(int i) {
			return getRuleContext(EntityArgumentContext.class,i);
		}
		public List<InversePartContext> inversePart() {
			return getRuleContexts(InversePartContext.class);
		}
		public InversePartContext inversePart(int i) {
			return getRuleContext(InversePartContext.class,i);
		}
		public List<DerivePartContext> derivePart() {
			return getRuleContexts(DerivePartContext.class);
		}
		public DerivePartContext derivePart(int i) {
			return getRuleContext(DerivePartContext.class,i);
		}
		public List<WherePartContext> wherePart() {
			return getRuleContexts(WherePartContext.class);
		}
		public WherePartContext wherePart(int i) {
			return getRuleContext(WherePartContext.class,i);
		}
		public List<UniquePartContext> uniquePart() {
			return getRuleContexts(UniquePartContext.class);
		}
		public UniquePartContext uniquePart(int i) {
			return getRuleContext(UniquePartContext.class,i);
		}
		public EntityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entity; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressGrammarVisitor ) return ((ExpressGrammarVisitor<? extends T>)visitor).visitEntity(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EntityContext entity() throws RecognitionException {
		EntityContext _localctx = new EntityContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_entity);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			beginEntity();
			setState(91); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(91);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case T__0:
				case SUBTYPE_OF:
				case SUPERTYPE_OF:
				case ABSTRACT:
					{
					setState(85);
					entityType();
					}
					break;
				case NAME:
					{
					setState(86);
					entityArgument();
					}
					break;
				case INVERSE:
					{
					setState(87);
					inversePart();
					}
					break;
				case DERIVE:
					{
					setState(88);
					derivePart();
					}
					break;
				case WHERE:
					{
					setState(89);
					wherePart();
					}
					break;
				case UNIQUE:
					{
					setState(90);
					uniquePart();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(93); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << SUBTYPE_OF) | (1L << SUPERTYPE_OF) | (1L << ABSTRACT) | (1L << WHERE) | (1L << DERIVE) | (1L << UNIQUE) | (1L << INVERSE) | (1L << NAME))) != 0) );
			setState(95);
			match(END_ENTITY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BeginEntityContext extends ParserRuleContext {
		public TerminalNode ENTITY() { return getToken(ExpressGrammarParser.ENTITY, 0); }
		public TerminalNode NAME() { return getToken(ExpressGrammarParser.NAME, 0); }
		public BeginEntityContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_beginEntity; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressGrammarVisitor ) return ((ExpressGrammarVisitor<? extends T>)visitor).visitBeginEntity(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BeginEntityContext beginEntity() throws RecognitionException {
		BeginEntityContext _localctx = new BeginEntityContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_beginEntity);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(ENTITY);
			setState(98);
			match(NAME);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntityTypeContext extends ParserRuleContext {
		public List<SubtypeOfContext> subtypeOf() {
			return getRuleContexts(SubtypeOfContext.class);
		}
		public SubtypeOfContext subtypeOf(int i) {
			return getRuleContext(SubtypeOfContext.class,i);
		}
		public List<SupertypeOfContext> supertypeOf() {
			return getRuleContexts(SupertypeOfContext.class);
		}
		public SupertypeOfContext supertypeOf(int i) {
			return getRuleContext(SupertypeOfContext.class,i);
		}
		public EntityTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entityType; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressGrammarVisitor ) return ((ExpressGrammarVisitor<? extends T>)visitor).visitEntityType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EntityTypeContext entityType() throws RecognitionException {
		EntityTypeContext _localctx = new EntityTypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_entityType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SUBTYPE_OF) | (1L << SUPERTYPE_OF) | (1L << ABSTRACT))) != 0)) {
				{
				setState(102);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case SUBTYPE_OF:
					{
					setState(100);
					subtypeOf();
					}
					break;
				case SUPERTYPE_OF:
				case ABSTRACT:
					{
					setState(101);
					supertypeOf();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(107);
			match(T__0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubtypeOfContext extends ParserRuleContext {
		public SubtypeOfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subtypeOf; }
	 
		public SubtypeOfContext() { }
		public void copyFrom(SubtypeOfContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class SubtypeContext extends SubtypeOfContext {
		public TerminalNode SUBTYPE_OF() { return getToken(ExpressGrammarParser.SUBTYPE_OF, 0); }
		public TerminalNode NAME() { return getToken(ExpressGrammarParser.NAME, 0); }
		public SubtypeContext(SubtypeOfContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressGrammarVisitor ) return ((ExpressGrammarVisitor<? extends T>)visitor).visitSubtype(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SubtypeOfContext subtypeOf() throws RecognitionException {
		SubtypeOfContext _localctx = new SubtypeOfContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_subtypeOf);
		try {
			_localctx = new SubtypeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(SUBTYPE_OF);
			setState(110);
			match(T__1);
			setState(111);
			match(NAME);
			setState(112);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SupertypeOfContext extends ParserRuleContext {
		public TerminalNode SUPERTYPE_OF() { return getToken(ExpressGrammarParser.SUPERTYPE_OF, 0); }
		public TerminalNode NAME() { return getToken(ExpressGrammarParser.NAME, 0); }
		public TerminalNode ABSTRACT() { return getToken(ExpressGrammarParser.ABSTRACT, 0); }
		public TerminalNode ONEOF() { return getToken(ExpressGrammarParser.ONEOF, 0); }
		public NameListContext nameList() {
			return getRuleContext(NameListContext.class,0);
		}
		public SupertypeOfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_supertypeOf; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressGrammarVisitor ) return ((ExpressGrammarVisitor<? extends T>)visitor).visitSupertypeOf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SupertypeOfContext supertypeOf() throws RecognitionException {
		SupertypeOfContext _localctx = new SupertypeOfContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_supertypeOf);
		int _la;
		try {
			setState(130);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ABSTRACT) {
					{
					setState(114);
					match(ABSTRACT);
					}
				}

				setState(117);
				match(SUPERTYPE_OF);
				setState(118);
				match(T__1);
				setState(119);
				match(NAME);
				setState(120);
				match(T__2);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ABSTRACT) {
					{
					setState(121);
					match(ABSTRACT);
					}
				}

				setState(124);
				match(SUPERTYPE_OF);
				setState(125);
				match(T__1);
				setState(126);
				match(ONEOF);
				setState(127);
				nameList();
				setState(128);
				match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EntityArgumentContext extends ParserRuleContext {
		public EntityArgumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entityArgument; }
	 
		public EntityArgumentContext() { }
		public void copyFrom(EntityArgumentContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AttrContext extends EntityArgumentContext {
		public TerminalNode NAME() { return getToken(ExpressGrammarParser.NAME, 0); }
		public TypeNameContext typeName() {
			return getRuleContext(TypeNameContext.class,0);
		}
		public CollectionOfContext collectionOf() {
			return getRuleContext(CollectionOfContext.class,0);
		}
		public CollectionArgPartContext collectionArgPart() {
			return getRuleContext(CollectionArgPartContext.class,0);
		}
		public TerminalNode OPTIONAL() { return getToken(ExpressGrammarParser.OPTIONAL, 0); }
		public AttrContext(EntityArgumentContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressGrammarVisitor ) return ((ExpressGrammarVisitor<? extends T>)visitor).visitAttr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EntityArgumentContext entityArgument() throws RecognitionException {
		EntityArgumentContext _localctx = new EntityArgumentContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_entityArgument);
		int _la;
		try {
			_localctx = new AttrContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(NAME);
			setState(133);
			match(T__3);
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPTIONAL) {
				{
				setState(134);
				match(OPTIONAL);
				}
			}

			setState(144);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(137);
				typeName();
				}
				break;
			case 2:
				{
				setState(138);
				collectionOf();
				setState(139);
				typeName();
				}
				break;
			case 3:
				{
				setState(141);
				collectionOf();
				setState(142);
				collectionArgPart();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CollectionOfContext extends ParserRuleContext {
		public TypeArrayKeywordContext typeArrayKeyword() {
			return getRuleContext(TypeArrayKeywordContext.class,0);
		}
		public TerminalNode OF() { return getToken(ExpressGrammarParser.OF, 0); }
		public List<TerminalNode> INT() { return getTokens(ExpressGrammarParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(ExpressGrammarParser.INT, i);
		}
		public TerminalNode NAME() { return getToken(ExpressGrammarParser.NAME, 0); }
		public TerminalNode UNIQUE() { return getToken(ExpressGrammarParser.UNIQUE, 0); }
		public CollectionOfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_collectionOf; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressGrammarVisitor ) return ((ExpressGrammarVisitor<? extends T>)visitor).visitCollectionOf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CollectionOfContext collectionOf() throws RecognitionException {
		CollectionOfContext _localctx = new CollectionOfContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_collectionOf);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			typeArrayKeyword();
			{
			setState(147);
			match(T__4);
			setState(148);
			match(INT);
			setState(149);
			match(T__3);
			setState(150);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__5) | (1L << INT) | (1L << NAME))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(151);
			match(T__6);
			}
			setState(153);
			match(OF);
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==UNIQUE) {
				{
				setState(154);
				match(UNIQUE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CollectionArgPartContext extends ParserRuleContext {
		public CollectionOfContext collectionOf() {
			return getRuleContext(CollectionOfContext.class,0);
		}
		public TypeNameContext typeName() {
			return getRuleContext(TypeNameContext.class,0);
		}
		public CollectionArgPartContext collectionArgPart() {
			return getRuleContext(CollectionArgPartContext.class,0);
		}
		public CollectionArgPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_collectionArgPart; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressGrammarVisitor ) return ((ExpressGrammarVisitor<? extends T>)visitor).visitCollectionArgPart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CollectionArgPartContext collectionArgPart() throws RecognitionException {
		CollectionArgPartContext _localctx = new CollectionArgPartContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_collectionArgPart);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				setState(157);
				collectionOf();
				setState(158);
				typeName();
				}
				break;
			case 2:
				{
				setState(160);
				collectionOf();
				setState(161);
				collectionArgPart();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BeginNameListContext extends ParserRuleContext {
		public BeginNameListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_beginNameList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExpressGrammarVisitor ) return ((ExpressGrammarVisitor<? extends T>)visitor).visitBeginNameList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BeginNameListContext beginNameList() throws RecognitionException {
		BeginNameListContext _localctx = new BeginNameListContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_beginNameList);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
